# HomeWork7-Block2

./: README.md  connect_to_db.py  create_new_table.py  faker_filler.py  main.py  models.py  pyproject.toml  query_selects.py
