[tool.poetry]
name = "homework7-block2"
version = "0.1.0"
description = "Home Work 7 from Block 2 by Volodymyr Sytnyk"
authors = ["NeverInMind"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^2.0.21"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
